Add page navigation

--- a/src/index.css
+++ b/src/index.css
@@ -18,4 +18,5 @@ body {
   --loading-dark-color: #878787;
   --card-background: #450920;
   --card-font-color: #fff;
+  --card-selected: #417d3c;
 }
